5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1756_674.log
== TEST (2019-05-20 19:20:21) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
v1= array(eval(input("Digite o vetor: ")))
print(size(v1))
print(v1[:0])
print(v1[:4])
print(max(v1))
print(min(v1))
print(sum(v1))
print(round(sum(v1)/size(v1),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 19:21:36) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
v1= array(eval(input("Digite o vetor: ")))
print(size(v1))
print(v1[:0])
print(v1[:-1])
print(max(v1))
print(min(v1))
print(sum(v1))
print(round(sum(v1)/size(v1),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 19:23:34) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
v1= array(eval(input("Digite o vetor: ")))
print(size(v1))
print(v1[:10])
print(v1)
print(max(v1))
print(min(v1))
print(sum(v1))
print(round(sum(v1)/size(v1),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 15:20:39) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
v1= array(eval(input("Digite o vetor: ")))
print(size(v1))
print(v1[:-5])
print(v1)
print(max(v1))
print(min(v1))
print(sum(v1))
print(round(sum(v1)/size(v1),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 15:21:02) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
v1= array(eval(input("Digite o vetor: ")))
print(size(v1))
print(v1[:1])
print(v1)
print(max(v1))
print(min(v1))
print(sum(v1))
print(round(sum(v1)/size(v1),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 15:21:32) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
v1= array(eval(input("Digite o vetor: ")))
print(size(v1))
print(v1:1)
print(v1)
print(max(v1))
print(min(v1))
print(sum(v1))
print(round(sum(v1)/size(v1),2))

-- ERROR:
File "XXXX", line 6
    print(v1:1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 15:22:05) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
v1= array(eval(input("Digite o vetor: ")))
print(size(v1))
print(v1[:1])
print(v1[:5])
print(max(v1))
print(min(v1))
print(sum(v1))
print(round(sum(v1)/size(v1),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 15:22:18) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
v1= array(eval(input("Digite o vetor: ")))
print(size(v1))
print(v1[:1])
print(v1[:5])
print(max(v1))
print(min(v1))
print(sum(v1))
print(round(sum(v1)/size(v1),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 15:22:24) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
v1= array(eval(input("Digite o vetor: ")))
print(size(v1))
print(v1[:1])
print(v1[:5])
print(max(v1))
print(min(v1))
print(sum(v1))
print(round(sum(v1)/size(v1),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 15:24:10) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
v1= array(eval(input("Digite o vetor: ")))
print(size(v1))
print(v1[:1])
print(v1[:6])
print(max(v1))
print(min(v1))
print(sum(v1))
print(round(sum(v1)/size(v1),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 15:24:58) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
v1= array(eval(input("Digite o vetor: ")))
print(size(v1))
print(v1[:1])
print(v1[:-1])
print(max(v1))
print(min(v1))
print(sum(v1))
print(round(sum(v1)/size(v1),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 15:25:03) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
v1= array(eval(input("Digite o vetor: ")))
print(size(v1))
print(v1[:1])
print(v1[:-1])
print(max(v1))
print(min(v1))
print(sum(v1))
print(round(sum(v1)/size(v1),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 15:25:35) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
v1= array(eval(input("Digite o vetor: ")))
print(size(v1))
print(v1[:1])
print(v1[:-3])
print(max(v1))
print(min(v1))
print(sum(v1))
print(round(sum(v1)/size(v1),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 15:25:42) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
v1= array(eval(input("Digite o vetor: ")))
print(size(v1))
print(v1[:1])
print(v1[:-3])
print(max(v1))
print(min(v1))
print(sum(v1))
print(round(sum(v1)/size(v1),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 15:26:40) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
v1= array(eval(input("Digite o vetor: ")))
print(size(v1))
print(v1[:1])
print(v1[:-6])
print(max(v1))
print(min(v1))
print(sum(v1))
print(round(sum(v1)/size(v1),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 15:26:55) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
v1= array(eval(input("Digite o vetor: ")))
print(size(v1))
print(v1[:1])
print(v1[:6])
print(max(v1))
print(min(v1))
print(sum(v1))
print(round(sum(v1)/size(v1),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 15:27:13) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
v1= array(eval(input("Digite o vetor: ")))
print(size(v1))
print(v1[:1])
print(v1[:5])
print(max(v1))
print(min(v1))
print(sum(v1))
print(round(sum(v1)/size(v1),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 15:27:34) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
v1= array(eval(input("Digite o vetor: ")))
print(size(v1))
print(v1[:1])
print(v1[:4])
print(max(v1))
print(min(v1))
print(sum(v1))
print(round(sum(v1)/size(v1),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 15:27:58) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
v1= array(eval(input("Digite o vetor: ")))
print(size(v1))
print(v1[:1])
print(v1[:-4])
print(max(v1))
print(min(v1))
print(sum(v1))
print(round(sum(v1)/size(v1),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 15:28:25) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
v1= array(eval(input("Digite o vetor: ")))
print(size(v1))
print(v1[:1])
print(v1[:0])
print(max(v1))
print(min(v1))
print(sum(v1))
print(round(sum(v1)/size(v1),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 15:28:45) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
v1= array(eval(input("Digite o vetor: ")))
print(size(v1))
print(v1[:1])
print(v1[:1])
print(max(v1))
print(min(v1))
print(sum(v1))
print(round(sum(v1)/size(v1),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 15:29:09) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
v1= array(eval(input("Digite o vetor: ")))
print(size(v1))
print(v1[:1])
print(v1[:2])
print(max(v1))
print(min(v1))
print(sum(v1))
print(round(sum(v1)/size(v1),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 15:29:14) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
v1= array(eval(input("Digite o vetor: ")))
print(size(v1))
print(v1[:1])
print(v1[:2])
print(max(v1))
print(min(v1))
print(sum(v1))
print(round(sum(v1)/size(v1),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 15:29:53) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
v1= array(eval(input("Digite o vetor: ")))
print(size(v1))
print(v1[:1])
print(v1[:-1])
print(max(v1))
print(min(v1))
print(sum(v1))
print(round(sum(v1)/size(v1),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 15:30:17) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
v1= array(eval(input("Digite o vetor: ")))
print(size(v1))
print(v1[:1])
print(v1[-1])
print(max(v1))
print(min(v1))
print(sum(v1))
print(round(sum(v1)/size(v1),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 15:30:45) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
v1= array(eval(input("Digite o vetor: ")))
print(size(v1))
print(v1[1])
print(v1[-1])
print(max(v1))
print(min(v1))
print(sum(v1))
print(round(sum(v1)/size(v1),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 15:31:32) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
v1= array(eval(input("Digite o vetor: ")))
print(size(v1))
print(v1[-5])
print(v1[-1])
print(max(v1))
print(min(v1))
print(sum(v1))
print(round(sum(v1)/size(v1),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 15:32:00) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
v1= array(eval(input("Digite o vetor: ")))
print(size(v1))
print(v1[-5])
print(v1[-1])
print(max(v1))
print(min(v1))
print(sum(v1))
print(round(sum(v1)/size(v1),2))

-- EXECUTION TIME:
0.496918
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
10
7
20
1
937
10.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 15:32:05) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
v1= array(eval(input("Digite o vetor: ")))
print(size(v1))
print(v1[-5])
print(v1[-1])
print(max(v1))
print(min(v1))
print(sum(v1))
print(round(sum(v1)/size(v1),2))

-- EXECUTION TIME:
0.397932
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
10
7
20
1
937
10.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 15:32:14) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
v1= array(eval(input("Digite o vetor: ")))
print(size(v1))
print(v1[-5])
print(v1[-1])
print(max(v1))
print(min(v1))
print(sum(v1))
print(round(sum(v1)/size(v1),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 15:34:42) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
v1= array(eval(input("Digite o vetor: ")))
print(size(v1))
print(v1[-5])
print(v1[-1])
print(max(v1))
print(min(v1))
print(sum(v1))
print(round(sum(v1)/size(v1),2))

-- EXECUTION TIME:
0.474171
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
10
7
20
1
937
10.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 18:53:56) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
v1= array(eval(input("Digite o vetor: ")))
print(size(v1))
print(v1[-5])
print(v1[-1])
print(max(v1))
print(min(v1))
print(sum(v1))
print(round(sum(v1)/size(v1),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 18:54:20) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
v1= array(eval(input("Digite o vetor: ")))
print(size(v1))
print(v1[-5])
print(v1[-1])
print(max(v1))
print(min(v1))
print(sum(v1))
print(round(sum(v1)/size(v1),2))

-- EXECUTION TIME:
0.574811
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
10
7
20
1
937
10.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 19:17:07) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
v1= array(eval(input("Digite o vetor: ")))
print(size(v1))
print(vet[0])
print(vet[-1])
print(max(v1))
print(min(v1))
print(sum(v1))
print(round(sum(v1)/size(v1),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 19:18:42) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
v1= array(eval(input("Digite o vetor: ")))
print(size(v1))
print(vet[0])
print(vet[-1])
print(max(v1))
print(min(v1))
print(sum(v1))
print(round(sum(v1)/size(v1),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 19:19:28) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
vet= array(eval(input("Digite o vetor: ")))
print(size(vet))
print(vet[0])
print(vet[-1])
print(max(vet))
print(min(vet))
print(sum(vet))
print(round(sum(vet)/size(vet),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 19:20:01) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
vet= array(eval(input("Digite o vetor: ")))
print(size(vet))
print(vet[0])
print(vet[-1])
print(max(vet))
print(min(vet))
print(sum(vet))
print(round(sum(vet)/size(vet),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 19:20:20) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
vet= array(eval(input("Digite o vetor: ")))
print(size(vet))
print(vet[0])
print(vet[-1])
print(max(vet))
print(min(vet))
print(sum(vet))
print(round(sum(vet)/size(vet),2))

-- EXECUTION TIME:
0.601607
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
13
7
20
1
937
10.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
